--- a/mobile/app/src/main/res/layout/activity_main.xml
+++ b/mobile/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
     tools:context=".screen.JokesActivity">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -122,4 +126,7 @@
             android:textSize="@dimen/_11sdp"
             android:layout_marginBottom="@dimen/_10sdp"/>
     </LinearLayout>
-</RelativeLayout>
+
+    </RelativeLayout>
+
+</ScrollView>
